<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvScore"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvPoints"
        app:layout_constraintStart_toEndOf="@+id/ivRedHeart3"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvScore"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/ivRedHeart1"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/life_heart" />

    <ImageView
        android:id="@+id/ivRedHeart2"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivRedHeart1"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/life_heart" />

    <ImageView
        android:id="@+id/ivRedHeart3"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/ivRedHeart2"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/life_heart" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPlayer"
        app:layout_constraintBottom_toTopOf="@+id/ivPlayer"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayer"
        app:layout_constraintStart_toStartOf="@+id/ivPlayer" />

    <TextView
        android:id="@+id/tvCPU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCPU"
        app:layout_constraintBottom_toTopOf="@+id/ivCPU"
        app:layout_constraintEnd_toEndOf="@+id/ivCPU"
        app:layout_constraintStart_toStartOf="@+id/ivCPU" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="98dp"
        app:layout_constraintEnd_toStartOf="@+id/ivCPU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/red_question_mark" />

    <ImageView
        android:id="@+id/ivCPU"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/red_question_mark" />

    <TextView
        android:id="@+id/tvWLMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivCPU"
        app:layout_constraintStart_toStartOf="@+id/ivPlayer"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/ivRock"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/cdRock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivRedHeart1"
        app:srcCompat="@drawable/pedra" />

    <ImageView
        android:id="@+id/ivPaper"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/cdPaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivScissor"
        app:layout_constraintStart_toEndOf="@+id/ivRock"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivScissor"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/cdScissor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPoints"
        app:srcCompat="@drawable/tisores" />

</androidx.constraintlayout.widget.ConstraintLayout>